# ED3-2

./: CMakeLists.txt
VainOurObjects/: Makefile  aux_arquivos.c  aux_arquivos.h  aux_funcoes.c  aux_funcoes.h  aux_geral.c  aux_geral.h  defs.h  main  main.c
remaster/: 1.in  2.in  3.in  4.in  5.in  Makefile  main.c  programTrab  todo
remaster/lib/: controlador_btree.h  controlador_csv.h  controlador_registro.h  defines.h  funcionalidades.h  middleware.h
remaster/lib/code/: controlador_btree.c  controlador_csv.c  controlador_registro.c  funcionalidades.c  middleware.c
